package org.example.Ecommerce;

public class AppEccomerce {
    public static void main(String[] args) {
        Tienda.iniciarPago();


    }
}

