package org.example.Ecommerce;


abstract class MetodoPago {
    abstract void procesarPago(double importe);
}
